// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component - TaskDetails renders correctly 1`] = `
Array [
  <header
    navItems={false}
    type="back"
  />,
  <PageContainer
    backGroundShape={true}
    data-testid="task-details-page"
  >
    <TaskDetailsPlaceHolder />
  </PageContainer>,
]
`;

exports[`Component - TaskDetails renders correctly 2`] = `
Array [
  <header
    navItems={false}
    type="back"
  />,
  <PageContainer
    backGroundShape={true}
    data-testid="task-details-page"
  />,
]
`;
